# PlannerGUI

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resources.qrc
core/: Planner.cpp  Planner.h  Task.cpp  Task.h  UserManager.cpp  UserManager.h
themes/: blue.qss  dark.qss  light.qss  pastel.qss
ui/: AddTaskDialog.cpp  AddTaskDialog.h  AddTaskDialog.ui  LoginWindow.cpp  LoginWindow.h  LoginWindow.ui  RegisterWindow.cpp  RegisterWindow.h  RegisterWindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
